--- a/app/src/main/res/layout/fragment_level_up.xml
+++ b/app/src/main/res/layout/fragment_level_up.xml
@@ -10,6 +10,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#86B6DF"
         android:gravity="center"
         android:orientation="vertical"
         android:padding="10dp"
@@ -30,11 +31,11 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:backgroundTint="#FFFFFF"
+                android:contentDescription="button"
                 android:text="Back"
                 android:textColor="#000000"
                 app:strokeColor="#000000"
-                app:strokeWidth="2dp"
-                android:contentDescription="button"/>
+                app:strokeWidth="2dp" />
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -53,6 +54,7 @@
                     android:gravity="center"
                     android:text="Player Name"
                     android:textAlignment="center"
+                    android:textColor="#FFFFFF"
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
@@ -64,6 +66,7 @@
                     android:gravity="center"
                     android:text="325 EXP"
                     android:textAlignment="center"
+                    android:textColor="#FFFFFF"
                     android:textSize="30sp" />
             </LinearLayout>
 
@@ -73,11 +76,11 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:backgroundTint="#FFFFFF"
+                android:contentDescription="button"
                 android:text="Apply"
                 android:textColor="#000000"
                 app:strokeColor="#000000"
-                app:strokeWidth="2dp"
-                android:contentDescription="button"/>
+                app:strokeWidth="2dp" />
         </LinearLayout>
 
         <LinearLayout
@@ -115,9 +118,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="3"
-                    tools:ignore="SpeakableTextPresentCheck"
                     android:contentDescription="button"
-                    android:src="@mipmap/ic_tiger_foreground" />
+                    android:src="@mipmap/ic_tiger_foreground"
+                    tools:ignore="SpeakableTextPresentCheck" />
 
                 <TextView
                     android:id="@+id/extraLifeCostText"
@@ -157,9 +160,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="3"
-                    tools:ignore="SpeakableTextPresentCheck"
                     android:contentDescription="button"
-                    android:src="@mipmap/ic_tiger_foreground" />
+                    android:src="@mipmap/ic_tiger_foreground"
+                    tools:ignore="SpeakableTextPresentCheck" />
 
                 <TextView
                     android:id="@+id/guaranteeCostText"
@@ -219,9 +222,21 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:backgroundTint="#0FBA98"
+                android:backgroundTint="#CFCCC8"
+                android:contentDescription="button"
                 android:text="Helare"
-                android:contentDescription="button"/>
+                android:textColor="#000000"
+                app:strokeColor="#A6A6A6"
+                app:strokeWidth="2dp" />
+
+            <Button
+                android:id="@+id/levelUpRogueButton"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:backgroundTint="#121212"
+                android:contentDescription="button"
+                android:text="Odåga" />
 
             <Button
                 android:id="@+id/levelUpMageButton"
@@ -229,26 +244,18 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:backgroundTint="#6C3CD8"
-                android:text="Magiker"
-                android:contentDescription="button"/>
-
-            <Button
-                android:id="@+id/levelUpRogueButton"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:backgroundTint="#683D20"
-                android:text="Odåga"
-                android:contentDescription="button"/>
+                android:contentDescription="button"
+                android:text="Magiker" />
 
             <Button
                 android:id="@+id/levelUpKnightButton"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:backgroundTint="#D88E0E"
+                android:backgroundTint="#FBCF5E"
+                android:contentDescription="button"
                 android:text="Riddare"
-                android:contentDescription="button"/>
+                android:textColor="#000000" />
         </LinearLayout>
 
         <LinearLayout
@@ -285,7 +292,7 @@
                     android:id="@+id/subclass1button1"
                     android:layout_width="130dp"
                     android:layout_height="130dp"
-                    android:backgroundTint="#93844E"
+                    android:backgroundTint="#FFFFFF"
                     android:contentDescription="button"
                     android:src="@mipmap/ic_tiger_foreground"
                     tools:ignore="SpeakableTextPresentCheck" />
@@ -331,8 +338,8 @@
                     android:layout_height="130dp"
                     android:backgroundTint="#FFFFFF"
                     android:contentDescription="button"
-                    tools:ignore="SpeakableTextPresentCheck"
-                    android:src="@mipmap/ic_tiger_foreground" />
+                    android:src="@mipmap/ic_tiger_foreground"
+                    tools:ignore="SpeakableTextPresentCheck" />
 
                 <TextView
                     android:id="@+id/subclass1Exp3"
@@ -353,8 +360,8 @@
                     android:layout_height="130dp"
                     android:backgroundTint="#FFFFFF"
                     android:contentDescription="button"
-                    tools:ignore="SpeakableTextPresentCheck"
-                    android:src="@mipmap/ic_tiger_foreground" />
+                    android:src="@mipmap/ic_tiger_foreground"
+                    tools:ignore="SpeakableTextPresentCheck" />
 
                 <TextView
                     android:id="@+id/subclass1Exp4"
@@ -398,8 +405,8 @@
                     android:layout_height="130dp"
                     android:backgroundTint="#FFFFFF"
                     android:contentDescription="button"
-                    tools:ignore="SpeakableTextPresentCheck"
-                    android:src="@mipmap/ic_tiger_foreground"/>
+                    android:src="@mipmap/ic_tiger_foreground"
+                    tools:ignore="SpeakableTextPresentCheck" />
 
                 <TextView
                     android:id="@+id/subclass2Exp1"
@@ -420,8 +427,8 @@
                     android:layout_height="130dp"
                     android:backgroundTint="#FFFFFF"
                     android:contentDescription="button"
-                    tools:ignore="SpeakableTextPresentCheck"
-                    android:src="@mipmap/ic_tiger_foreground" />
+                    android:src="@mipmap/ic_tiger_foreground"
+                    tools:ignore="SpeakableTextPresentCheck" />
 
                 <TextView
                     android:id="@+id/subclass2Exp2"
@@ -442,8 +449,8 @@
                     android:layout_height="130dp"
                     android:backgroundTint="#FFFFFF"
                     android:contentDescription="button"
-                    tools:ignore="SpeakableTextPresentCheck"
-                    android:src="@mipmap/ic_tiger_foreground" />
+                    android:src="@mipmap/ic_tiger_foreground"
+                    tools:ignore="SpeakableTextPresentCheck" />
 
                 <TextView
                     android:id="@+id/subclass2Exp3"
@@ -464,8 +471,8 @@
                     android:layout_height="130dp"
                     android:backgroundTint="#FFFFFF"
                     android:contentDescription="button"
-                    tools:ignore="SpeakableTextPresentCheck"
-                    android:src="@mipmap/ic_tiger_foreground" />
+                    android:src="@mipmap/ic_tiger_foreground"
+                    tools:ignore="SpeakableTextPresentCheck" />
 
                 <TextView
                     android:id="@+id/subclass2Exp4"
@@ -508,8 +515,8 @@
                     android:layout_height="130dp"
                     android:backgroundTint="#FFFFFF"
                     android:contentDescription="button"
-                    tools:ignore="SpeakableTextPresentCheck"
-                    android:src="@mipmap/ic_tiger_foreground" />
+                    android:src="@mipmap/ic_tiger_foreground"
+                    tools:ignore="SpeakableTextPresentCheck" />
 
                 <TextView
                     android:id="@+id/subclass3Exp1"
@@ -530,8 +537,8 @@
                     android:layout_height="130dp"
                     android:backgroundTint="#FFFFFF"
                     android:contentDescription="button"
-                    tools:ignore="SpeakableTextPresentCheck"
-                    android:src="@mipmap/ic_tiger_foreground" />
+                    android:src="@mipmap/ic_tiger_foreground"
+                    tools:ignore="SpeakableTextPresentCheck" />
 
                 <TextView
                     android:id="@+id/subclass3Exp2"
@@ -552,8 +559,8 @@
                     android:layout_height="130dp"
                     android:backgroundTint="#FFFFFF"
                     android:contentDescription="button"
-                    tools:ignore="SpeakableTextPresentCheck"
-                    android:src="@mipmap/ic_tiger_foreground" />
+                    android:src="@mipmap/ic_tiger_foreground"
+                    tools:ignore="SpeakableTextPresentCheck" />
 
                 <TextView
                     android:id="@+id/subclass3Exp3"
@@ -574,8 +581,8 @@
                     android:layout_height="130dp"
                     android:backgroundTint="#FFFFFF"
                     android:contentDescription="button"
-                    tools:ignore="SpeakableTextPresentCheck"
-                    android:src="@mipmap/ic_tiger_foreground" />
+                    android:src="@mipmap/ic_tiger_foreground"
+                    tools:ignore="SpeakableTextPresentCheck" />
 
                 <TextView
                     android:id="@+id/subclass3Exp4"
