--- a/app/src/main/res/layout/assign_team_item.xml
+++ b/app/src/main/res/layout/assign_team_item.xml
@@ -62,12 +62,12 @@
             android:visibility="visible" />
 
         <TextView
-            android:id="@+id/assignTeam_bookingEmail"
+            android:id="@+id/assignTeam_GroupName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginRight="5dp"
-            android:layout_weight="8"
-            android:text="nameson.booker.very_long_embarassing_adress@email.com"
+            android:layout_weight="5"
+            android:textAlignment="center"
             android:textColor="#000000" />
 
         <Button
@@ -108,7 +108,33 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/checkIn_itemInfoHeaders"
+        android:id="@+id/assignTeam_notepanel"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:padding="5dp"
+        android:paddingBottom="5dp"
+        android:visibility="gone">
+
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
+            android:text="Note:"
+            android:textStyle="italic" />
+
+        <TextView
+            android:id="@+id/assignTeam_Note"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="note text"
+            android:textStyle="italic" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/assignTeam_itemInfoHeaders"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#B3B3B3"
@@ -122,7 +148,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
             android:layout_weight="1"
-            android:text="Guardian\nName"
+            android:text="Kontaktperson\nNamn"
             android:textStyle="bold" />
 
         <TextView
@@ -131,16 +157,16 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
             android:layout_weight="1"
-            android:text="Guardian\nPhone Nr"
+            android:text="Kontaktperson\nTelefon"
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/assignTeam_ContactEmailHeader"
+            android:id="@+id/assignTeam_BookerEmailHeader"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
             android:layout_weight="1"
-            android:text="Guardian\nEmail"
+            android:text="Bokare Email"
             android:textStyle="bold" />
 
         <TextView
@@ -149,25 +175,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
             android:layout_weight="1"
-            android:text="Booker\nName"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/assignTeam_BookingPhoneHeader"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:layout_weight="1"
-            android:text="Booker\nPhone Nr"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/assignTeam_NoteHeader"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:layout_weight="1"
-            android:text="Note"
+            android:text="Bokare Namn"
             android:textStyle="bold" />
 
         <Space
@@ -175,11 +183,11 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
-            android:layout_weight="0.3" />
+            android:layout_weight="1" />
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/checkIn_itemInfoTexts"
+        android:id="@+id/assignTeam_itemInfoTexts"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#B3B3B3"
@@ -208,12 +216,12 @@
             android:textColor="#000000" />
 
         <TextView
-            android:id="@+id/assignTeam_ContactEmail"
+            android:id="@+id/assignTeam_bookingEmail"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
             android:layout_weight="1"
-            android:text="nameo_parentson_also_long_embarrassing_adress@email.com"
+            android:text="nameson.booker.very_long_embarassing_adress@email.com"
             android:textColor="#000000" />
 
         <TextView
@@ -225,36 +233,18 @@
             android:text="Nameson Booker"
             android:textColor="#000000" />
 
-        <TextView
-            android:id="@+id/assignTeam_BookingPhone"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:layout_weight="1"
-            android:text="073 987 65 43"
-            android:textColor="#000000" />
-
-        <TextView
-            android:id="@+id/assignTeam_Note"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:layout_weight="1"
-            android:text="Massive noting notington with words and info that's probably important"
-            android:textColor="#000000" />
-
         <Button
-            android:id="@+id/assignTeam_removeButton"
+            android:id="@+id/assignTeam_HideNoteButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
-            android:layout_weight="0.3"
-            android:backgroundTint="#F64E4E"
+            android:layout_weight="1"
+            android:backgroundTint="#FFFFFF"
             android:contentDescription="remove player button"
+            android:text="Hide Note"
             android:textColor="#000000"
-            app:icon="@drawable/ic_baseline_delete_24"
             app:iconGravity="textStart"
             app:iconPadding="0dp"
             app:iconSize="25dp"
