--- a/app/src/main/res/layout/event_item.xml
+++ b/app/src/main/res/layout/event_item.xml
@@ -13,70 +13,73 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:background="#CCC5F3"
-        android:gravity="center_vertical"
-        android:padding="5dp">
+        android:gravity="center"
+        android:paddingLeft="40dp"
+        android:paddingTop="10dp"
+        android:paddingRight="10dp"
+        android:paddingBottom="10dp">
 
-        <ImageView
-            android:id="@+id/event_image"
-            android:layout_width="match_parent"
-            android:layout_height="128dp"
-            android:layout_marginEnd="10dp"
-            android:layout_weight="2"
-            app:srcCompat="@drawable/ic_launcher_background" />
+        <TextView
+            android:id="@+id/event_text_title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="4"
+            android:text="Title"
+            android:textSize="25sp" />
+
+        <TextView
+            android:id="@+id/event_text_date"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="2.5"
+            android:text="Date"
+            android:textAlignment="center"
+            android:textSize="25sp" />
+
+        <TextView
+            android:id="@+id/event_text_time"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="1.5"
+            android:text="Time"
+            android:textAlignment="center"
+            android:textSize="25sp" />
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_weight="2"
             android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/event_text_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:text="Title"
-                android:textSize="25sp" />
-
-            <TextView
-                android:id="@+id/event_text_date"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:text="Date"
-                android:textSize="20sp" />
-
-            <TextView
-                android:id="@+id/event_text_time"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:text="Time"
-                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/event_text_playerAmount"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="2"
                 android:text="Player Amount"
+                android:textAlignment="center"
                 android:textSize="20sp" />
+
+            <ImageView
+                android:id="@+id/event_icon"
+                android:layout_width="match_parent"
+                android:layout_height="78dp"
+                android:layout_weight="3"
+                app:srcCompat="@drawable/ic_in_play" />
 
             <TextView
                 android:id="@+id/event_text_status"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="2"
+                android:layout_weight="1"
                 android:text="Status"
+                android:textAlignment="center"
                 android:textSize="20sp" />
         </LinearLayout>
-
-        <ImageView
-            android:id="@+id/event_icon"
-            android:layout_width="match_parent"
-            android:layout_height="77dp"
-            android:layout_weight="3"
-            app:srcCompat="@drawable/ic_in_play" />
 
     </LinearLayout>
 </layout>
