--- a/app/src/main/res/layout/assign_team_item.xml
+++ b/app/src/main/res/layout/assign_team_item.xml
@@ -9,7 +9,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#FFFFFF"
+        android:background="@color/background_green_extralight"
         android:gravity="center"
         android:orientation="horizontal"
         android:visibility="visible">
@@ -40,15 +40,13 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="5dp"
             android:layout_weight="3"
-            android:backgroundTint="#FFFFFF"
+            android:backgroundTint="@color/buttonGreen"
             android:contentDescription="Check Id Button"
             android:text="Check Id"
-            android:textColor="#000000"
+            android:textColor="#FFFFFF"
             android:textSize="10sp"
-            android:visibility="visible"
-            app:iconTint="#000000"
-            app:strokeColor="#000000"
-            app:strokeWidth="2dp" />
+            android:textStyle="bold"
+            android:visibility="visible" />
 
         <TextView
             android:id="@+id/assignTeam_playerId"
@@ -111,6 +109,7 @@
         android:id="@+id/assignTeam_notepanel"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/background_green_extralight"
         android:orientation="horizontal"
         android:padding="5dp"
         android:paddingBottom="5dp"
@@ -137,7 +136,7 @@
         android:id="@+id/assignTeam_itemInfoHeaders"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#B3B3B3"
+        android:background="@color/background_green_medium"
         android:orientation="horizontal"
         android:padding="5dp"
         android:visibility="gone">
@@ -190,7 +189,7 @@
         android:id="@+id/assignTeam_itemInfoTexts"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#B3B3B3"
+        android:background="@color/background_green_medium"
         android:gravity="top"
         android:orientation="horizontal"
         android:paddingLeft="5dp"
@@ -225,7 +224,7 @@
             android:textColor="#000000" />
 
         <TextView
-            android:id="@+id/assignTeam_BookingName"
+            android:id="@+id/assignTeam_BookerName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
