--- a/app/src/main/res/layout/fragment_level_up.xml
+++ b/app/src/main/res/layout/fragment_level_up.xml
@@ -10,7 +10,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#86B6DF"
+        android:background="@color/background_green_medium"
         android:gravity="center"
         android:orientation="vertical"
         android:padding="10dp"
@@ -88,7 +88,7 @@
             android:layout_height="0dp"
             android:layout_marginBottom="20dp"
             android:layout_weight="2"
-            android:background="#C6C6C6"
+            android:background="@color/background_green_light"
             android:gravity="center"
             android:orientation="horizontal">
 
@@ -118,6 +118,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="3"
+                    android:backgroundTint="@color/background_green_extralight"
                     android:contentDescription="button"
                     android:src="@mipmap/ic_tiger_foreground"
                     tools:ignore="SpeakableTextPresentCheck" />
@@ -160,6 +161,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="3"
+                    android:backgroundTint="@color/background_green_extralight"
                     android:contentDescription="button"
                     android:src="@mipmap/ic_tiger_foreground"
                     tools:ignore="SpeakableTextPresentCheck" />
@@ -222,7 +224,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:backgroundTint="#CFCCC8"
+                android:backgroundTint="#FFF2E1"
                 android:contentDescription="button"
                 android:text="Helare"
                 android:textColor="#000000"
@@ -263,7 +265,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="8"
-            android:background="#D3D3D3"
+            android:background="@color/background_green_light"
             android:orientation="horizontal">
 
             <LinearLayout
