--- a/app/src/main/res/layout/fragment_event_view.xml
+++ b/app/src/main/res/layout/fragment_event_view.xml
@@ -229,12 +229,25 @@
                         android:orientation="vertical"
                         android:padding="10dp">
 
-                        <Button
-                            android:id="@+id/devButton"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:backgroundTint="#148800"
-                            android:text="DEV" />
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="horizontal">
+
+                            <Button
+                                android:id="@+id/devButton"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginRight="20dp"
+                                android:backgroundTint="#148800"
+                                android:text="DEV" />
+
+                            <Button
+                                android:id="@+id/assign_team_autoAssignButton"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Auto-Assign Teams" />
+                        </LinearLayout>
 
                         <LinearLayout
                             android:id="@+id/assign_team_org_buttons"
@@ -411,7 +424,7 @@
                         <androidx.recyclerview.widget.RecyclerView
                             android:id="@+id/checkInRecycler"
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent" />
+                            android:layout_height="wrap_content" />
 
                     </LinearLayout>
 
