--- a/app/src/main/res/layout/group_manual_popup.xml
+++ b/app/src/main/res/layout/group_manual_popup.xml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_height="400dp"
+    android:background="@color/background_green_light"
     android:gravity="center"
-    android:orientation="vertical"
-    android:padding="10dp">
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
-        android:text="Gruppera Manuellt"
+        android:background="@color/background_green_medium"
+        android:padding="5dp"
+        android:text="Group Manually"
         android:textAlignment="center"
         android:textSize="18sp" />
 
@@ -19,22 +22,32 @@
         android:id="@+id/gm_ticketName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:layout_marginBottom="10dp"
-        android:text="namn"
-        android:textAlignment="center" />
+        android:text="name"
+        android:textAlignment="center"
+        android:textSize="24sp" />
 
     <TextView
         android:id="@+id/textView12"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
-        android:text="Gruppera med..."
-        android:textAlignment="center" />
+        android:text="Group with..."
+        android:textAlignment="center"
+        android:textSize="18sp" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/groupRecycler"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="10dp">
+        android:layout_height="0dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_weight="7"
+        android:background="@color/background_green_light"
+        android:padding="5dp">
 
     </androidx.recyclerview.widget.RecyclerView>
 
@@ -42,12 +55,18 @@
         android:id="@+id/gm_ticketsFound"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:layout_marginBottom="10dp"
-        android:text="X tickets found" />
+        android:text="X tickets found"
+        android:textAlignment="center"
+        android:textSize="18sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:orientation="horizontal">
 
         <Button
@@ -56,7 +75,11 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="40dp"
             android:layout_weight="1"
-            android:text="Cancel" />
+            android:backgroundTint="#FFFFFF"
+            android:text="Cancel"
+            android:textColor="#000000"
+            app:strokeColor="#000000"
+            app:strokeWidth="2dp" />
 
         <Button
             android:id="@+id/gm_acceptButton"
